--- a/priv/pgsql/test_queries.queries.conf
+++ b/priv/pgsql/test_queries.queries.conf
@@ -1,3 +1,5 @@
 {queries,[
-  { get_workers_values, "select worker_name, worker_value from workers", [], [] }
+  { get_workers_values, "select worker_name, worker_value from workers", [], [] },
+  { set_worker_value,   "update workers set worker_value = '~s' where worker_name = '~s' limit 1", ["worker_value", "worker_name"], ["",""] },
+  { get_worker_value,   "select worker_value from workers where worker_name = '~s' limit 1", ["worker_name"], [""] }
 ]}.
